force-app/main/default/objects/Test__c/Test__c.object-meta.xml
<CustomObject>
    <description>Copado Object to spin a test scenario</description>
    <label>Test</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>