force-app/main/default/objects/Test__c/fields/AcceptanceCriteria__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceCriteria__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>