force-app/main/default/objects/Test__c/fields/ExtensionConfiguration__c.field-meta.xml
<CustomField>
    <fullName>ExtensionConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The displayed values are based on the active Extension Configuration records available in your org.</inlineHelpText>
    <label>Tool Configuration</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Make sure the selected Extension Configuration is valid and active.</errorMessage>
        <filterItems>
            <field>ExtensionConfiguration__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ExtensionConfiguration__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>ChildTests</relationshipName>
    <type>Lookup</type>
</CustomField>