force-app/main/default/objects/Test__c/fields/Latest_Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Result_Status__c</fullName>
    <formula>IF(
  ISPICKVAL(LatestJobExecution__r.Status__c, &apos;Successful&apos;), &apos;Success&apos;, 
  IF(
    ISPICKVAL(LatestJobExecution__r.Status__c, &apos;Error&apos;), &apos;Failed&apos;, 
    IF(
      ISBLANK(LatestJobExecution__c), &apos;Not Started&apos;, TEXT(LatestJobExecution__r.Status__c)
    )
  )
)</formula>
    <label>Latest Result Status</label>
    <type>Text</type>
</CustomField>