force-app/main/default/objects/Test__c/fields/LatestJobExecution__c.field-meta.xml
<CustomField>
    <fullName>LatestJobExecution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Job Execution</label>
    <referenceTo>JobExecution__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>