force-app/main/default/objects/Test__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>IF( NOT( ISBLANK( Parent_Id__c ) ) , HYPERLINK(&quot;/&quot;+Parent_Id__c, Parent_Id__c, &quot;_self&quot;) , &quot;&quot;)</formula>
    <label>Parent</label>
    <type>Text</type>
</CustomField>