force-app/main/default/objects/Test__c/fields/Test_Tool__c.field-meta.xml
<CustomField>
    <fullName>Test_Tool__c</fullName>
    <formula>TEXT(ExtensionConfiguration__r.ExtensionTool__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Tool</label>
    <type>Text</type>
</CustomField>