force-app/main/default/objects/Test__c/validationRules/PreventUpdatingToolConfiguration.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUpdatingToolConfiguration</fullName>
    <active>true</active>
    <description>This rule prevents users from modifying the Tool Configuration after the test is created.</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
 ISCHANGED( ExtensionConfiguration__c ) )</errorConditionFormula>
    <errorMessage>This Tool Configuration cannot be modified. Please create a new Test and select the Tool Configuration needed.</errorMessage>
</ValidationRule>