force-app/main/default/objects/Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Tool__c</columns>
    <columns>Type__c</columns>
    <columns>ReadyToRun__c</columns>
    <columns>ExtensionConfiguration__c</columns>
    <columns>User_Story__c</columns>
    <columns>Feature__c</columns>
    <columns>Application__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>